--- a/index.html
+++ b/index.html
@@ -47,18 +47,22 @@
             <label for="release">Release</label>
             <input type="range" id="release" min="0" max="2" step="0.01" value="0.5">
 
-            <!-- Control de Volumen -->
             <label for="volume">Volume</label>
             <input type="range" id="volume" min="0" max="1" step="0.01" value="0.5">
         </div>
         
         <div class="keyboard">
             <div class="key white" data-note="C"><div class="key-label">C</div></div>
+            <div class="key black" data-note="C#"><div class="key-label">C#</div></div>
             <div class="key white" data-note="D"><div class="key-label">D</div></div>
+            <div class="key black" data-note="D#"><div class="key-label">D#</div></div>
             <div class="key white" data-note="E"><div class="key-label">E</div></div>
             <div class="key white" data-note="F"><div class="key-label">F</div></div>
+            <div class="key black" data-note="F#"><div class="key-label">F#</div></div>
             <div class="key white" data-note="G"><div class="key-label">G</div></div>
+            <div class="key black" data-note="G#"><div class="key-label">G#</div></div>
             <div class="key white" data-note="A"><div class="key-label">A</div></div>
+            <div class="key black" data-note="A#"><div class="key-label">A#</div></div>
             <div class="key white" data-note="B"><div class="key-label">B</div></div>
         </div>
     </div>
