--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Synth</title>
+    <title>Synthesizer</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Synth</h1>
+        <h1>Synthesizer</h1>
         <div class="controls">
             <label for="waveform">Shape</label>
             <select id="waveform">
