--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Synthesis</title>
-    <link rel="icon" href="favicon.svg">
+    <title>Synthesizer</title>
+    <link rel="icon" href="images/favicon.svg">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
