--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <li class="key black" data-note="C#5"><span class="key-label">O</span></li>
         <li class="key white" data-note="D5"><span class="key-label">L</span></li>
         <li class="key black" data-note="D#5"><span class="key-label">P</span></li>
-        <li class="key white" data-note="E5"><span class="key-label">Ñ</span></li>
+        <li class="key white" data-note="E5"></li>
     </ol>
     <script src="script.js"></script>
 </body>
