--- a/index.html
+++ b/index.html
@@ -69,22 +69,22 @@
     </header>
     <!-- Teclado de DO4 a MI5 -->
     <ol class="keyboard">
-        <li class="key white" data-note="C4"></li>
-        <li class="key black" data-note="C#4"></li>
-        <li class="key white" data-note="D4"></li>
-        <li class="key black" data-note="D#4"></li>
-        <li class="key white" data-note="E4"></li>
-        <li class="key white" data-note="F4"></li>
-        <li class="key black" data-note="F#4"></li>
-        <li class="key white" data-note="G4"></li>
-        <li class="key black" data-note="G#4"></li>
-        <li class="key white" data-note="A4"></li>
-        <li class="key black" data-note="A#4"></li>
-        <li class="key white" data-note="B4"></li>
-        <li class="key white" data-note="C5"></li>
-        <li class="key black" data-note="C#5"></li>
-        <li class="key white" data-note="D5"></li>
-        <li class="key black" data-note="D#5"></li>
+        <li class="key white" data-note="C4"><span class="key-label">A</span></li>
+        <li class="key black" data-note="C#4"><span class="key-label">W</span></li>
+        <li class="key white" data-note="D4"><span class="key-label">S</span></li>
+        <li class="key black" data-note="D#4"><span class="key-label">E</span></li>
+        <li class="key white" data-note="E4"><span class="key-label">D</span></li>
+        <li class="key white" data-note="F4"><span class="key-label">F</span></li>
+        <li class="key black" data-note="F#4"><span class="key-label">T</span></li>
+        <li class="key white" data-note="G4"><span class="key-label">G</span></li>
+        <li class="key black" data-note="G#4"><span class="key-label">Y</span></li>
+        <li class="key white" data-note="A4"><span class="key-label">H</span></li>
+        <li class="key black" data-note="A#4"><span class="key-label">U</span></li>
+        <li class="key white" data-note="B4"><span class="key-label">J</span></li>
+        <li class="key white" data-note="C5"><span class="key-label">K</span></li>
+        <li class="key black" data-note="C#5"><span class="key-label">O</span></li>
+        <li class="key white" data-note="D5"><span class="key-label">L</span></li>
+        <li class="key black" data-note="D#5"><span class="key-label">P</span></li>
         <li class="key white" data-note="E5"></li>
     </ol>
     <script src="script.js"></script>
