--- a/index.html
+++ b/index.html
@@ -43,17 +43,21 @@
             </select>
             <label for="octave">Octave</label>
             <select id="octave">
+                <option value="1">1</option>
+                <option value="2">2</option>
                 <option value="3">3</option>
                 <option value="4" selected>4</option>
                 <option value="5">5</option>
                 <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
             </select>
-            <label for="polyphony">Polyphony</label>
+            <label for="polyphony">Oscillators</label>
             <select id="polyphony">
-                <option value="1">1 voice</option>
-                <option value="2">2 voices</option>
-                <option value="3">3 voices</option>
-                <option value="4">4 voices</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
             </select>
             <label for="recording">Recording</label>
             <button id="recordButton">Start</button>
