--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
                 <option value="2">2</option>
                 <option value="3">3</option>
                 <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="7">8</option>
             </select>
             <label for="recording">Recording</label>
             <button id="recordButton">Start</button>
@@ -66,21 +70,21 @@
     <!-- Teclado de DO4 a MI5 -->
     <ol class="keyboard">
         <li class="key white" data-note="C4"><span class="key-label">C</span></li>
-        <li class="key black" data-note="C#4"><span class="key-label">C#</span></li>
+        <li class="key black" data-note="C#4"><span class="key-label">C#<br>Db</span></li>
         <li class="key white" data-note="D4"><span class="key-label">D</span></li>
-        <li class="key black" data-note="D#4"><span class="key-label">D#</span></li>
+        <li class="key black" data-note="D#4"><span class="key-label">D#<br>Eb</span></li>
         <li class="key white" data-note="E4"><span class="key-label">E</span></li>
         <li class="key white" data-note="F4"><span class="key-label">F</span></li>
-        <li class="key black" data-note="F#4"><span class="key-label">F#</span></li>
+        <li class="key black" data-note="F#4"><span class="key-label">F#<br>Gb</span></li>
         <li class="key white" data-note="G4"><span class="key-label">G</span></li>
-        <li class="key black" data-note="G#4"><span class="key-label">G#</span></li>
+        <li class="key black" data-note="G#4"><span class="key-label">G#<br>Ab</span></li>
         <li class="key white" data-note="A4"><span class="key-label">A</span></li>
-        <li class="key black" data-note="A#4"><span class="key-label">A#</span></li>
+        <li class="key black" data-note="A#4"><span class="key-label">A#<br>Bb</span></li>
         <li class="key white" data-note="B4"><span class="key-label">B</span></li>
         <li class="key white" data-note="C5"><span class="key-label">C</span></li>
-        <li class="key black" data-note="C#5"><span class="key-label">C#</span></li>
+        <li class="key black" data-note="C#5"><span class="key-label">C#<br>Db</span></li>
         <li class="key white" data-note="D5"><span class="key-label">D</span></li>
-        <li class="key black" data-note="D#5"><span class="key-label">D#</span></li>
+        <li class="key black" data-note="D#5"><span class="key-label">D#<br>Eb</span></li>
         <li class="key white" data-note="E5"><span class="key-label">E</span></li>
     </ol>
     <script src="script.js"></script>
