--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <option value="7">7</option>
                 <option value="8">8</option>
             </select>
-            <label for="polyphony">Oscillators</label>
+            <label for="polyphony">Oscillator</label>
             <select id="polyphony">
                 <option value="1">1</option>
                 <option value="2">2</option>
